--- a/onitu/drivers/dropbox/README
+++ b/onitu/drivers/dropbox/README
@@ -6,3 +6,44 @@ Dropbox account.
 
 Retrieve the access key and secret provided by the script and put it in
 Onitu's setup.json for Onitu to use it to authenticate itself with the Dropbox Core API.
+
+Dropbox Driver
+==============
+
+This is the Onitu driver for the Dropbox cloud service. It permits to sync Onitu with your Dropbox account.
+
+Dropbox uses OAuth to authenticate the user behind an application wanting to use it.
+Hence, to let Onitu authenticate itself to Dropbox, you're going to need to generate OAuth tokens.
+
+To do that, we provide a script called get_access_token.py that generates for you the URL you need to go to to allow Dropbox use for Onitu.
+Just run "python get_access_token.py" in a terminal, and go to the generated URL. Once you did it, come back to the terminal and follow the instructions.
+
+The script will then provide you an "Access Key" and an "Access Secret". They are the codes you'll need to use with Onitu.
+
+Once you have them, you need to create a new driver entry in the setup JSON file (setup.json), and fill in the following fields:
+- driver : this should always be "dropbox"
+- options: The following options can be used:
+  - root: The folder under which you want Onitu to put all the transferred files on your Dropbox. Onitu won't put files elsewhere. If you want to use the whole Dropbox, omit it or set ""
+  - access_key: Put here your Access Key
+  - access_secret: Put here your Access Secret
+  - changes_timer: Onitu periodically checks for changes on Dropbox. Use this to set a period of time, in seconds, between each retry. Defaults to 5 minutes (300 seconds) if you omit it. However, you may not set less than 5 minutes due to Dropbox limitations
+
+A correct syntax for the entry could be the following:
+    "dropbox": {
+      "driver": "dropbox",
+      "options": {
+        "root": "/onitu",
+        "access_key": "YourAccessKey",
+        "access_secret": "YourAccessSecret",
+	"changes_timer" : 300
+      }
+    }
+
+Then, to synchronize a folder with Dropbox, e.g. the "dropb/" folder, add this to your rules:
+
+    {
+      "match": {"path": "/dropb/"},
+      "sync": ["dropbox"]
+    }
+
+This will sync the dropb/ folder with the driver named dropbox.
