Minor change in README again

--- a/onitu/drivers/dropbox/README
+++ b/onitu/drivers/dropbox/README
@@ -26,7 +26,7 @@ Once you have them, you need to create a new driver entry in the setup JSON file
   - root: The folder under which you want Onitu to put all the transferred files on your Dropbox. Onitu won't put files elsewhere. If you want to use the whole Dropbox, omit it or set ""
   - access_key: Put here your Access Key
   - access_secret: Put here your Access Secret
-  - changes_timer: Onitu periodically checks for changes on Dropbox. Use this to set a period of time, in seconds, between each retry. Defaults to 1 minute (60 seconds) if you omit it. However, you may not set less than 5 minutes due to Dropbox limitations
+  - changes_timer: Onitu periodically checks for changes on Dropbox. Use this to set a period of time, in seconds, between each retry. Defaults to 1 minute (60 seconds) if you omit it.
 
 A correct syntax for the entry could be the following:
     "dropbox": {
