--- a/onitu/drivers/hubic/README
+++ b/onitu/drivers/hubic/README
@@ -1,11 +1,17 @@
-For getting the refresh token use the script get_refresh_token.py.
-You can find it in /onitu/drivers/hubic/get_refresh_token.py.
+Getting started with the HUBIC driver
+=====================================
 
-Please put the same client_id and client_secret in the script than in the onitu's configuration file.
+Run the get_refresh_token.py script in order to let Onitu gain access to your
+HUBIC account.
 
-To get the client_id and client_secret, go to this page https://hubic.com/home/browser/developers/
-Then add a new application. The redirection domain should be http://localhost/
-Finally edit and launch the get_refresh_token.py script
+How works the get_refresh_token.py script:
+
+Your web browser will be launched in order to let Onitu gain access to your Flickr account..
+Then, you will be redirected to a localhost address.
+There is a parameter (in the url) named code.
+You will need to copy/paste it for the next part of this script.
+
+The code parameter in the redirected url is after 'http://localhost/?code=' and before '&scope=...'
 
 An example of setup.json file with hubic:
 
@@ -13,24 +19,18 @@ An example of setup.json file with hubic:
   "name": "example",
 
   "entries": {
-        "hubic-A": {
+        "hubic": {
               "driver": "hubic",
               "options": {
-                    "root": "/onitu-A",
-                    "refresh_token": "",
-                    "client_id": "",
-                    "client_secret": "",
+                    "root": "/onitu_hubic",
+                    "refresh_token": "THE TOKEN RETRIEVED WITH GET_REFRESH_TOKEN.PY",
                     "changes_timer" : 60
               }
         },
-        "hubic-B": {
-              "driver": "hubic",
+        "local": {
+              "driver": "local_storage",
               "options": {
-                    "root": "/onitu-B",
-                    "refresh_token": "",
-                    "client_id": "",
-                    "client_secret": "",
-                    "changes_timer" : 60
+                    "root": "/onitu_local"
               }
         }
   },
@@ -38,7 +38,7 @@ An example of setup.json file with hubic:
   "rules": [
     {
       "match": {"path": "/"},
-      "sync": ["hubic-A", "hubic-B"]
+      "sync": ["hubic", "local"]
     }
   ]
 
