--- a/drivers/hubic/README
+++ b/drivers/hubic/README
@@ -9,9 +9,9 @@ How works the get_refresh_token.py script:
 Your web browser will be launched in order to let Onitu gain access to your Hubic account.
 You're going to need to input your Hubic credentials and then hit the "Accept" button.
 Then, you will be redirected to a localhost address saying a problem occurred.
-This is normal because you probably have no web server running on your machine.
+This is normal because you probably don't have a web server running on your machine.
 There is a parameter (in the url) named code.
-It is what you will need to copy/paste it for the next part of this script.
+It is what you will need to copy/paste for the next part of this script.
 
 The code parameter in the redirected url is after 'http://localhost/?code=' and before '&scope=...'.
 
