--- a/drivers/wd/README
+++ b/drivers/wd/README
@@ -1,42 +1,35 @@
 Getting started with the Webdav driver
 ======================================
 
-All the defaults variables are optional:
+The driver handles the following options:
 
-protocol: "http"
-username: ""
-password: ""
-port: 8008
-changes_timer: 60
+- hostname (no default value)
+- username (default value is "")
+- password (default value is "")
+- changes_timer (default value is 60)
 
-An example of setup.json which use a private key (uses the default value) with an empty password (default value), a default port.
+An example of setup.yml which can be used to store files on [box](http://box.com)
 
-{
-  "name": "example",
+```
+name: example
 
-  "entries": {
-    "LOC": {
-      "driver": "local_storage",
-      "options": {
-        "root": "example/loc"
-      }
-    },
-    "WEBDAV": {
-      "driver": "webdav",
-      "options": {
-        "root": "/onitu",
-        "hostname": "localhost",
-        "changes_timer": 2,
-        "protocol": "http"
-      }
-    }
-  },
+folders:
+  docs:
+    file_size:
+      max: 2G
 
-  "rules": [
-    {
-      "match": {"path": "/"},
-      "sync": ["LOC", "ONITU"]
-    }
-  ]
-
-}
+services:
+  A:
+    driver: local_storage
+    folders:
+      docs: ~/Documents
+  B:
+    driver: wd
+    options:
+        hostname: "https://dav.box.com"
+        username: "me@mydomain.tld"
+        password: "password"
+        changes_timer: 360
+    folders:
+      backup: /dav/backup
+```
